fixing home page alignment

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -204,6 +204,7 @@
   z-index: 10;
   padding: 20px;
   margin-bottom: 10vh;
+  margin-right: -100px;
 
   @include for-medium-devices-down {
     margin-bottom: 0px;
@@ -373,7 +374,7 @@
 // END OF SECOND SECTION
 
 .third-section {
-  padding: 50px 80px 0px;
+  padding: 50px 48px 0px;
   background: #2A2A2A;
   @include for-small-devices-down {
     padding: 50px 16px 0px;
@@ -755,7 +756,7 @@
 
 .fourth-section {
   background: #2A2A2A;
-  padding: 0px 80px 100px;
+  padding: 0px 48px 100px;
   @include for-small-devices-down {
     padding: 0px 0px 100px;
   }
@@ -763,7 +764,7 @@
 
 .fifth-section {
   background: #2A2A2A;
-  padding: 0px 80px 150px;
+  padding: 0px 48px 150px;
   @include for-small-devices-down {
     padding: 0px 0px 100px;
   }
@@ -795,9 +796,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 150px 48px;
+  padding: 0px 48px 150px;
   @include for-small-devices-down {
-    padding: 100px 16px;
+    padding: 0px 16px 100px;
   }
 }
 
@@ -806,8 +807,8 @@
 }
 
 .eigth-section-one {
-  width: 76vw;
-  position: absolute;
+  width: 100%;
+  position: relative;
   top: -50px;
   display: flex;
   flex-direction: column;
